# fa-monitoring-example

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
infra/grafana/provisioning/dashboards/: default.yaml  fastapi-example.json
infra/prometheus/: prometheus.yml
load_producer/: loader.py  producer.py
src/: bootstrap.py  main.py  middlewares.py
src/example/: router.py
src/metrics/: __init__.py  metrics.py  router.py
src/middlewares/: __init__.py  http_metrics_middleware.py  inflight_requests_middleware.py  process_time_middleware.py
