[project]
name = "fa-monitoring-example"
version = "0.1.0"
description = "Example FastAPI application with Grafana + Prometheus + Loki monitoring."
authors = [
    {name = "YodZ0",email = "timur.g00gle@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false