[project]
name = "fa-monitoring-example"
version = "0.1.0"
description = "Example FastAPI application with Grafana + Prometheus + Loki monitoring."
authors = [
    {name = "YodZ0",email = "timur.g00gle@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "prometheus-client (>=0.24.1,<0.25.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"

